src/clippercapi/cpp/clippercapi.h

typedef void Paths64;
CAPI void Clipper_BooleanOp(Paths64* inClosedSubjectPaths, Paths64* inOpenSubjectPaths, Paths64* inClipPaths, int clipType, int fillRule, bool preserveCollinear, bool reverseSolution, Paths64* outClosedPaths, Paths64* outOpenPaths);
CAPI void Clipper_Offset(Paths64* inPaths, double delta, int joinType, int endType, double miterLimit, double arcTolerance, bool preserveCollinear, bool reverseSolution, Paths64* outPaths);
CAPI Paths64* Clipper_IntersectClosedWithRect(Paths64* paths, long long left, long long top, long long right, long long bottom);
CAPI Paths64* Clipper_IntersectOpenWithRect(Paths64* paths, long long left, long long top, long long right, long long bottom);
CAPI Paths64* Clipper_Simplify(Paths64* paths, double epsilon, bool isClosed);