src/main/java/com/loadingbyte/cinecred/natives/clippercapi/clippercapi_h.java


    /**
     * Address for:
     * {@snippet lang=c :
     * void Clipper_BooleanOp(Paths64 *inClosedSubjectPaths, Paths64 *inOpenSubjectPaths, Paths64 *inClipPaths, int clipType, int fillRule, _Bool preserveCollinear, _Bool reverseSolution, Paths64 *outClosedPaths, Paths64 *outOpenPaths)
     * }
     */
    public static MemorySegment Clipper_BooleanOp$address() {
        return Clipper_BooleanOp.ADDR;
    }

    /**
     * {@snippet lang=c :
     * void Clipper_BooleanOp(Paths64 *inClosedSubjectPaths, Paths64 *inOpenSubjectPaths, Paths64 *inClipPaths, int clipType, int fillRule, _Bool preserveCollinear, _Bool reverseSolution, Paths64 *outClosedPaths, Paths64 *outOpenPaths)
     * }
     */
    public static void Clipper_BooleanOp(MemorySegment inClosedSubjectPaths, MemorySegment inOpenSubjectPaths, MemorySegment inClipPaths, int clipType, int fillRule, boolean preserveCollinear, boolean reverseSolution, MemorySegment outClosedPaths, MemorySegment outOpenPaths) {
        var mh$ = Clipper_BooleanOp.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("Clipper_BooleanOp", inClosedSubjectPaths, inOpenSubjectPaths, inClipPaths, clipType, fillRule, preserveCollinear, reverseSolution, outClosedPaths, outOpenPaths);
            }
            mh$.invokeExact(inClosedSubjectPaths, inOpenSubjectPaths, inClipPaths, clipType, fillRule, preserveCollinear, reverseSolution, outClosedPaths, outOpenPaths);
        } catch (Error | RuntimeException ex) {
           throw ex;
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class Clipper_Offset {
        public static final FunctionDescriptor DESC = FunctionDescriptor.ofVoid(
            clippercapi_h.C_POINTER,
            clippercapi_h.C_DOUBLE,
            clippercapi_h.C_INT,
            clippercapi_h.C_INT,
            clippercapi_h.C_DOUBLE,
            clippercapi_h.C_DOUBLE,
            clippercapi_h.C_BOOL,
            clippercapi_h.C_BOOL,
            clippercapi_h.C_POINTER
        );

        public static final MemorySegment ADDR = SYMBOL_LOOKUP.findOrThrow("Clipper_Offset");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * void Clipper_Offset(Paths64 *inPaths, double delta, int joinType, int endType, double miterLimit, double arcTolerance, _Bool preserveCollinear, _Bool reverseSolution, Paths64 *outPaths)
     * }
     */
    public static FunctionDescriptor Clipper_Offset$descriptor() {
        return Clipper_Offset.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * void Clipper_Offset(Paths64 *inPaths, double delta, int joinType, int endType, double miterLimit, double arcTolerance, _Bool preserveCollinear, _Bool reverseSolution, Paths64 *outPaths)
     * }
     */
    public static MethodHandle Clipper_Offset$handle() {
        return Clipper_Offset.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * void Clipper_Offset(Paths64 *inPaths, double delta, int joinType, int endType, double miterLimit, double arcTolerance, _Bool preserveCollinear, _Bool reverseSolution, Paths64 *outPaths)
     * }
     */
    public static MemorySegment Clipper_Offset$address() {
        return Clipper_Offset.ADDR;
    }

    /**
     * {@snippet lang=c :
     * void Clipper_Offset(Paths64 *inPaths, double delta, int joinType, int endType, double miterLimit, double arcTolerance, _Bool preserveCollinear, _Bool reverseSolution, Paths64 *outPaths)
     * }
     */
    public static void Clipper_Offset(MemorySegment inPaths, double delta, int joinType, int endType, double miterLimit, double arcTolerance, boolean preserveCollinear, boolean reverseSolution, MemorySegment outPaths) {
        var mh$ = Clipper_Offset.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("Clipper_Offset", inPaths, delta, joinType, endType, miterLimit, arcTolerance, preserveCollinear, reverseSolution, outPaths);
            }
            mh$.invokeExact(inPaths, delta, joinType, endType, miterLimit, arcTolerance, preserveCollinear, reverseSolution, outPaths);
        } catch (Error | RuntimeException ex) {
           throw ex;
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class Clipper_IntersectClosedWithRect {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            clippercapi_h.C_POINTER,
            clippercapi_h.C_POINTER,
            clippercapi_h.C_LONG_LONG,
            clippercapi_h.C_LONG_LONG,
            clippercapi_h.C_LONG_LONG,
            clippercapi_h.C_LONG_LONG
        );

        public static final MemorySegment ADDR = SYMBOL_LOOKUP.findOrThrow("Clipper_IntersectClosedWithRect");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * Paths64 *Clipper_IntersectClosedWithRect(Paths64 *paths, long long left, long long top, long long right, long long bottom)
     * }
     */
    public static FunctionDescriptor Clipper_IntersectClosedWithRect$descriptor() {
        return Clipper_IntersectClosedWithRect.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * Paths64 *Clipper_IntersectClosedWithRect(Paths64 *paths, long long left, long long top, long long right, long long bottom)
     * }
     */
    public static MethodHandle Clipper_IntersectClosedWithRect$handle() {
        return Clipper_IntersectClosedWithRect.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * Paths64 *Clipper_IntersectClosedWithRect(Paths64 *paths, long long left, long long top, long long right, long long bottom)
     * }
     */
    public static MemorySegment Clipper_IntersectClosedWithRect$address() {
        return Clipper_IntersectClosedWithRect.ADDR;
    }

    /**
     * {@snippet lang=c :
     * Paths64 *Clipper_IntersectClosedWithRect(Paths64 *paths, long long left, long long top, long long right, long long bottom)
     * }
     */
    public static MemorySegment Clipper_IntersectClosedWithRect(MemorySegment paths, long left, long top, long right, long bottom) {
        var mh$ = Clipper_IntersectClosedWithRect.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("Clipper_IntersectClosedWithRect", paths, left, top, right, bottom);
            }
            return (MemorySegment)mh$.invokeExact(paths, left, top, right, bottom);
        } catch (Error | RuntimeException ex) {
           throw ex;
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class Clipper_IntersectOpenWithRect {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            clippercapi_h.C_POINTER,
            clippercapi_h.C_POINTER,
            clippercapi_h.C_LONG_LONG,
            clippercapi_h.C_LONG_LONG,
            clippercapi_h.C_LONG_LONG,
            clippercapi_h.C_LONG_LONG
        );

        public static final MemorySegment ADDR = SYMBOL_LOOKUP.findOrThrow("Clipper_IntersectOpenWithRect");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * Paths64 *Clipper_IntersectOpenWithRect(Paths64 *paths, long long left, long long top, long long right, long long bottom)
     * }
     */
    public static FunctionDescriptor Clipper_IntersectOpenWithRect$descriptor() {
        return Clipper_IntersectOpenWithRect.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * Paths64 *Clipper_IntersectOpenWithRect(Paths64 *paths, long long left, long long top, long long right, long long bottom)
     * }
     */
    public static MethodHandle Clipper_IntersectOpenWithRect$handle() {
        return Clipper_IntersectOpenWithRect.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * Paths64 *Clipper_IntersectOpenWithRect(Paths64 *paths, long long left, long long top, long long right, long long bottom)
     * }
     */
    public static MemorySegment Clipper_IntersectOpenWithRect$address() {
        return Clipper_IntersectOpenWithRect.ADDR;
    }

    /**
     * {@snippet lang=c :
     * Paths64 *Clipper_IntersectOpenWithRect(Paths64 *paths, long long left, long long top, long long right, long long bottom)
     * }
     */
    public static MemorySegment Clipper_IntersectOpenWithRect(MemorySegment paths, long left, long top, long right, long bottom) {
        var mh$ = Clipper_IntersectOpenWithRect.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("Clipper_IntersectOpenWithRect", paths, left, top, right, bottom);
            }
            return (MemorySegment)mh$.invokeExact(paths, left, top, right, bottom);
        } catch (Error | RuntimeException ex) {
           throw ex;
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class Clipper_Simplify {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            clippercapi_h.C_POINTER,
            clippercapi_h.C_POINTER,
            clippercapi_h.C_DOUBLE,
            clippercapi_h.C_BOOL
        );

        public static final MemorySegment ADDR = SYMBOL_LOOKUP.findOrThrow("Clipper_Simplify");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * Paths64 *Clipper_Simplify(Paths64 *paths, double epsilon, _Bool isClosed)
     * }
     */
    public static FunctionDescriptor Clipper_Simplify$descriptor() {
        return Clipper_Simplify.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * Paths64 *Clipper_Simplify(Paths64 *paths, double epsilon, _Bool isClosed)
     * }
     */
    public static MethodHandle Clipper_Simplify$handle() {
        return Clipper_Simplify.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * Paths64 *Clipper_Simplify(Paths64 *paths, double epsilon, _Bool isClosed)
     * }
     */
    public static MemorySegment Clipper_Simplify$address() {
        return Clipper_Simplify.ADDR;
    }

    /**
     * {@snippet lang=c :
     * Paths64 *Clipper_Simplify(Paths64 *paths, double epsilon, _Bool isClosed)
     * }
     */
    public static MemorySegment Clipper_Simplify(MemorySegment paths, double epsilon, boolean isClosed) {
        var mh$ = Clipper_Simplify.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("Clipper_Simplify", paths, epsilon, isClosed);
            }
            return (MemorySegment)mh$.invokeExact(paths, epsilon, isClosed);
        } catch (Error | RuntimeException ex) {
           throw ex;
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }
}

